fix popup spacing

--- a/static/css/popup.css
+++ b/static/css/popup.css
@@ -1,7 +1,7 @@
 #popup-window {
     position: fixed;
     width: 300px;
-    height: 300px;
+    height: 370px;
     background: white;
     border: 1px solid black;
     padding: 10px;
